--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   </head>
 
   <body>
+  <div class="sidebar">
+    <%= render 'layouts/sidebar' %>
+  </div>
+  <div class="content">
+      <% if notice %>
+      <p class="notice"><%= notice %></p>
+    <% end %>
     <%= yield %>
+  </div>
   </body>
 </html>
