--- a/app/views/storages/index.html.erb
+++ b/app/views/storages/index.html.erb
@@ -29,9 +29,9 @@
   </tbody>
 </table>
 
-<%= link_to 'New Storage', new_storage_path, class: 'btn btn-success', data: { turbo_frame: "modal" } %>
+<%= link_to 'New Storage', new_storage_path, class: 'btn btn-success', data: { turbo_frame: "storage_new_modal" } %>
 
-<turbo-frame id="modal">
+<turbo-frame id="storage_new_modal">
   <%# モーダルの中身はここに表示される %>
 </turbo-frame>
 
