--- a/app/views/storages/new.html.erb
+++ b/app/views/storages/new.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag "modal" do %>
+<%= turbo_frame_tag "storage_new_modal" do %>
   <div class="fixed inset-0 z-50 flex items-center justify-center" style="background-color: rgba(0, 0, 0, 0.5)">
     <div class="bg-white p-4 rounded-lg shadow-lg relative">
       </button>
