--- a/app/views/storages/index.html.erb
+++ b/app/views/storages/index.html.erb
@@ -1,11 +1,5 @@
 <h1>Storages</h1>
-<turbo-frame id="storage_new_modal">
-  <%# モーダルの中身はここに表示される %>
-</turbo-frame>
 
-<turbo-frame id="storage_edit_modal">
-  <%# モーダルの中身はここに表示される %>
-</turbo-frame>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -28,12 +22,9 @@
             <% end %>
           </ul>
         </td>
-
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to 'New Storage', new_storage_path, class: 'btn btn-success', data: { turbo_frame: "storage_new_modal" } %>
-
-
+<%= render "storages/form" %>
