ページネーション機能の追加

--- a/app/views/storages/index.html.erb
+++ b/app/views/storages/index.html.erb
@@ -37,9 +37,10 @@
 
       </tr>
     <% end %>
+    
   </tbody>
 </table>
-
+<%= paginate @storages %>
 <%= render "storages/form" %>
 
 <turbo-frame id="storage_edit_modal">
