--- a/app/views/storages/edit.html.erb
+++ b/app/views/storages/edit.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag "storage_edit_modal" do %>
+<%= turbo_frame_tag "storage" do %>
       <%= render "storages/form" %>
   <%= button_to storage_path(@storage), method: :delete, data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' }, class: "btn btn-danger" do %>
     </div>
