--- a/app/views/storages/index.html.erb
+++ b/app/views/storages/index.html.erb
@@ -47,9 +47,12 @@
   <tbody>
     <% @storages.each do |storage| %>
       <tr>
+      <%= turbo_frame_tag "storage" do %>
         <td>
-           <%= link_to storage.storage, edit_storage_path(storage), class: 'btn btn-warning', data: { turbo_frame: "storage_edit_modal" } %>
+           <%= storage.storage %>
+           <%= link_to "Edit", edit_storage_path(storage), class: 'btn btn-warning' %>
         </td>
+        <% end %>
         <td>
           <ul>
             <% storage.shelves.each do |shelf| %>
@@ -67,7 +70,3 @@
 </table>
 <%= paginate @storages %>
 <%= render "storages/form" %>
-
-<turbo-frame id="storage_edit_modal">
-  <%# モーダルの中身はここに表示される %>
-</turbo-frame>
