--- a/app/views/storages/edit.html.erb
+++ b/app/views/storages/edit.html.erb
@@ -1,6 +1,9 @@
 <%= turbo_frame_tag @storage do %>
+    <div class="mt-4">
   <%= render "storages/form" %>
 <%= button_to storage_path(@storage), method: :delete, data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？', turbo_frame: "_top" }, class: "btn btn-danger" do %>
   Delete
 <% end %>
+    <%= link_to "キャンセル", storage_path(@storage), class: "btn btn-secondary" %>
+   </div> 
 <% end %>
