--- a/app/views/storages/edit.html.erb
+++ b/app/views/storages/edit.html.erb
@@ -4,6 +4,8 @@
 <%= button_to storage_path(@storage), method: :delete, data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？', turbo_frame: "_top" }, class: "btn btn-danger" do %>
   Delete
 <% end %>
-    <%= link_to "キャンセル", storage_path(@storage), class: "btn btn-secondary" %>
+   <%= link_to "キャンセル", storages_path, class: "btn btn-secondary", data: { turbo_frame: "_top" } %>
+
+
    </div> 
 <% end %>
