--- a/app/views/shelves/edit.html.erb
+++ b/app/views/shelves/edit.html.erb
@@ -1,23 +1,11 @@
 <%= turbo_frame_tag @shelf do %>
-  <div class="modal fade" id="editShelfModal" tabindex="-1" aria-labelledby="editShelfModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="editShelfModalLabel">棚の編集</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
+    <div class="mt-4">
           <%= render "shelves/form", shelf: @shelf, storage: @storage %>
-        </div>
-        <div class="modal-footer">
-          <%= button_to storage_shelf_path(@storage, @shelf), method: :patch, data: { turbo_method: :patch, turbo_frame: "_top" }, class: "btn btn-primary" do %>
-            保存
+
+
+          <%= button_to storage_shelf_path(@storage, @shelf), method: :delete, data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？', turbo_frame: "_top" }, class: "btn btn-danger" do %>
+            Delete
           <% end %>
-          <%= button_to "#", data: { turbo_frame: "_top", bs_dismiss: "modal" }, class: "btn btn-secondary" do %>
-            キャンセル
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
+          <%= link_to "キャンセル", storages_path, class: "btn btn-secondary", data: { turbo_frame: "_top" } %>
+   </div> 
 <% end %>
