--- a/app/views/shelves/_form.html.erb
+++ b/app/views/shelves/_form.html.erb
@@ -7,12 +7,13 @@
   <div class="actions">
     <%= form.submit %>
   </div>
-  <% if @storage.errors.any? %>
+
+  <% if shelf.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@storage.errors.count, "error") %> prohibited this storage from being saved:</h2>
+    <h2><%= pluralize(shelf.errors.count, "error") %> prohibited this shelf from being saved:</h2>
 
     <ul>
-      <% @storage.errors.full_messages.each do |message| %>
+      <% shelf.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
