削除できた

--- a/app/views/shelves/edit.html.erb
+++ b/app/views/shelves/edit.html.erb
@@ -4,12 +4,15 @@
       <div class="field">
         <%= form.text_field :shelf, placeholder: "棚名" %>
         <%= form.submit "更新", class: "btn btn-primary" %>
-            <%= button_to storage_shelf_path(@storage, @shelf), method: :delete, data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？', turbo_frame: "shelf_#{@shelf.id}" }, class: "btn btn-danger" do %>
-      削除
-    <% end %>
+            <% end %>
+<%= button_to storage_shelf_path(@storage, @shelf), method: :delete, data: { turbo_confirm: '本当に削除しますか？', turbo_frame: "_top" }, class: "btn btn-danger" do %>
+  削除
+<% end %>
+
+
         <%= link_to "キャンセル", storages_path, class: "btn btn-secondary", data: { turbo_frame: "_top" } %>
       </div>
-    <% end %>
+
 
 
   </div>
