--- a/app/views/storages/_form.html.erb
+++ b/app/views/storages/_form.html.erb
@@ -1,21 +1,17 @@
-<%= form_with(model: @storage, url: @storage.new_record? ? storages_path : storage_path(@storage), method: @storage.new_record? ? :post : :patch) do |form| %>
-  <div class="field">
-    <%= form.label :storage %>
-    <%= form.text_field :storage %>
-  </div>
+<%= form_with(model: @storage, url: @storage.new_record? ? storages_path : storage_path(@storage), method: @storage.new_record? ? :post : :patch, class: "d-flex align-items-center") do |form| %>
+  <%= form.text_field :storage, placeholder: "倉庫名", class: "me-2 form-control" %>
+  <%= form.submit "追加", class: "btn btn-primary me-2" %>
   <%= form.hidden_field :id %>
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-  <% if @storage.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@storage.errors.count, "error") %> prohibited this storage from being saved:</h2>
 
-    <ul>
-      <% @storage.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
+  <% if @storage.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@storage.errors.count, "error") %> prohibited this storage from being saved:</h2>
+
+      <ul>
+        <% @storage.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 <% end %>
