ここから予約画面

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,6 +1,7 @@
 <nav>
   <ul>
     <li><%= link_to "Home", root_path %></li>
+    <li><%= link_to "予約画面", items_path %></li>
     <li><%= link_to "保管場所", storages_path %></li>
 
     
