itemからcategoryのがいbキー削除

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <thead>
     <tr>
+      <th>カテゴリー</th>
       <th>機器</th>
       <th>品名</th>
       <th>所属</th>
@@ -14,16 +15,60 @@
     </tr>
   </thead>
   <tbody>
-    <% @items.each do |item| %>
+    <% @categories.each do |category| %>
       <tr>
-        <td><%= item.equipment.equipment %></td>
-        <td><%= item.item %></td>
-        <td><%= item.affiliation.affiliation %></td>
-        <td><%= item.rental_fee %></td>
-        <td><%= item.pre_rental_fee %></td>
-        <td><%= item.serial %></td>
-        <td><%= item.status %></td>
-        <td><%= item.memo %></td>
+        <td><%= category.name %></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <% category.equipment.each do |equipment| %>
+        <tr>
+          <td></td>
+          <td><%= equipment.equipment %></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <% equipment.items.each do |item| %>
+          <tr>
+            <td></td>
+            <td></td>
+            <td><%= item.item %></td>
+            <td><%= item.affiliation.affiliation %></td>
+            <td><%= item.rental_fee %></td>
+            <td><%= item.pre_rental_fee %></td>
+            <td><%= item.serial %></td>
+            <td><%= item.status %></td>
+            <td><%= item.memo %></td>
+          </tr>
+        <% end %>
+      <% end %>
+    <% end %>
+  </tbody>
+</table>
+
+<h2>カテゴリー一覧</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>カテゴリー名</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @categories_for_list.each do |category| %>
+      <tr>
+        <td><%= category.name %></td>
       </tr>
     <% end %>
   </tbody>
