スライドバー作成

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -13,31 +13,32 @@
 <div class="tab-content mt-3">
   <% @categories.each_with_index do |category, index| %>
     <div class="tab-pane fade <%= 'show active' if index == 0 %>" id="category<%= category.id %>">
-      
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>機器名</th>
-            <th>品名</th>
-            <% (Date.today..Date.today + 30).each do |date| %>
-        <th><%= date.strftime("%-m/%-d") %></th>
-      <% end %>
-          </tr>
-        </thead>
-        <tbody>
-          <% category.equipment.each do |equipment| %>
-            <% equipment.items.each do |item| %>
-              <tr>
-                <td><%= item.equipment.equipment %></td>
-                <td><%= item.item %></td>
-             <% (Date.today..Date.today + 30).each do |date| %>
-            <td></td>
-          <% end %>
-              </tr>
-            <% end %>
+      <div style="overflow-x: auto;">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>機器名</th>
+              <th>品名</th>
+              <% (Date.today..Date.today + 30).each do |date| %>
+                <th><%= date.strftime("%-m/%-d") %></th>
+              <% end %>
+            </tr>
+          </thead>
+          <tbody>
+            <% category.equipment.each do |equipment| %>
+              <% equipment.items.each do |item| %>
+                <tr>
+                  <td><%= item.equipment.equipment %></td>
+                  <td><%= item.item %></td>
+                  <% (Date.today..Date.today + 30).each do |date| %>
+                    <td>◇</td>
+                  <% end %>
+                </tr>
+              <% end %>
             <% end %>
           </tbody>
-      </table>
+        </table>
+      </div>
     </div>
   <% end %>
 </div>
