--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -28,19 +28,24 @@
           <tbody>
             <% category.equipment.each do |equipment| %>
               <% equipment.items.each do |item| %>
-               <% item.item_nos.each do |item_no| %>
                 <tr>
-                  <td><%= item.equipment.equipment %></td>
+                  <td><%= equipment.equipment %></td>
                   <td><%= item.item %></td>
-                  <td><%= item_no.item_no %></td>
+                  <td>
+                    <% item.item_nos.each do |item_no| %>
+                      <%= item_no.item_no %>
+                      <% if item.item_nos.size > 1 %>
+                        <br>
+                      <% end %>
+                    <% end %>
+                  </td>
                   <% (Date.today..Date.today + 30).each do |date| %>
                     <td><%= turbo_frame_tag 'reservation' do %>
-                        <%= link_to "◇", new_item_path, class: "btn btn-sm btn-outline-primary me-2" , data: { turbo_frame: "modal" } %>
+                         <%= link_to "◇", new_reservation_path, class: "btn btn-sm btn-outline-primary me-2" , data: { turbo_frame: "modal" } %>
                         <% end %></td>
                   <% end %>
                 </tr>
               <% end %>
-            <% end %>
             <% end %>
           </tbody>
         </table>
@@ -48,5 +53,3 @@
     </div>
   <% end %>
 </div>
-
-
