--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -28,24 +28,20 @@
           <tbody>
             <% category.equipment.each do |equipment| %>
               <% equipment.items.each do |item| %>
+               <% item.item_nos.each do |item_no| %>
                 <tr>
-                  <td><%= equipment.equipment %></td>
+                  <td><%= item.equipment.equipment %></td>
                   <td><%= item.item %></td>
-                  <td>
-                    <% item.item_nos.each do |item_no| %>
-                      <%= item_no.item_no %>
-                      <% if item.item_nos.size > 1 %>
-                        <br>
-                      <% end %>
-                    <% end %>
-                  </td>
+                  <td><%= item_no.item_no %></td>
                   <% (Date.today..Date.today + 30).each do |date| %>
-                    <td><%= turbo_frame_tag 'reservation' do %>
-                         <%= link_to "◇", new_reservation_path, class: "btn btn-sm btn-outline-primary me-2" , data: { turbo_frame: "modal" } %>
-                        <% end %></td>
+<td><%= turbo_frame_tag 'reservation' do %>
+    <%= link_to "◇", new_reservation_path(item_id: item.id, item_no_id: item.item_nos.first.id, date: date), class: "btn btn-sm btn-outline-primary me-2" , data: { turbo_frame: "modal" } %>
+    <% end %></td>
+
                   <% end %>
                 </tr>
               <% end %>
+            <% end %>
             <% end %>
           </tbody>
         </table>
@@ -53,3 +49,5 @@
     </div>
   <% end %>
 </div>
+
+
